# meta-evaluator

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  code.txt  description.md  diff.txt  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
annotation_guide/annotation/: index.html
annotation_guide/deployment/: index.html
docker/: Dockerfile  Dockerfile.airbase  docker-compose.yml
docs/: LLMClient.md  index.md  quickstart.md  tutorial.md
docs/annotation_guide/: annotation.md  deployment.md
docs/guides/: base.md  evaldata.md  evaltask.md  judges_load.md  judges_run.md  results.md  scoring.md
docs/superpowers/plans/: 2026-06-25-annotation-ui-migration.md  2026-07-03-preserve-required-tasks.md
docs/superpowers/specs/: 2026-06-25-annotation-ui-migration-design.md  2026-07-01-initial-task-autofocus-design.md  2026-07-01-task-card-keyboard-focus-design.md  2026-07-03-preserve-required-tasks-design.md
examples/: basic_annotation_demo.py  metaevaluator_annotation_demo.py
examples/rabakbench/: run_evaluation.py  run_evaluation_async.py  run_human_annotation.py
examples/rejection/: Dockerfile-airbase  docker-compose.yml  judges.yaml  prompt.md  run_evaluation.py  run_evaluation_async.py  run_evaluation_sync.py  run_human_annotation.py  run_scoring_only.py  run_scoring_only_async.py  run_stress_test_ui.py
examples/rejection/data/: sample_rejection.csv
guides/base/: index.html
guides/evaldata/: index.html
guides/evaltask/: index.html
guides/judges_load/: index.html
guides/judges_run/: index.html
guides/results/: index.html
guides/scoring/: index.html
openspec/changes/document-multilabel-tasks/: design.md  proposal.md  tasks.md
openspec/changes/multilabel-task-type/: design.md  proposal.md  tasks.md
openspec/specs/annotator-layout/: spec.md
quickstart/: index.html
search/: search_index.json
src/meta_evaluator/: __init__.py
src/meta_evaluator/LLMClient/: LLM_client.py  __init__.py  exceptions.py  models.py
src/meta_evaluator/annotator/: __init__.py  exceptions.py  results.py
src/meta_evaluator/common/: __init__.py  async_utils.py  error_constants.py  models.py
src/meta_evaluator/data/: DataLoader.py  EvalData.py  __init__.py  dataloader.py  eval_data.py  exceptions.py  serialization.py
src/meta_evaluator/eval_task/: __init__.py  eval_task.py  exceptions.py  serialization.py
src/meta_evaluator/evaluation_task/: __init__.py  evaluation_task.py  serialization.py
src/meta_evaluator/judge/: __init__.py  async_evaluator.py  enums.py  exceptions.py  judge.py  models.py  serialization.py  sync_evaluator.py
src/meta_evaluator/llm_client/: LLM_client.py  __init__.py  anthropic_client.py  async_anthropic_client.py  async_azureopenai_client.py  async_client.py  async_openai_client.py  azureopenai_client.py  base_client.py  client.py  enums.py  exceptions.py  models.py  openai_client.py  serialization.py
src/meta_evaluator/results/: base.py  (+7 more)
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_packaging.py
tests/annotator/: conftest.py  test_annotator_integration.py  test_human_results.py  test_launcher.py  test_results.py
tests/data/: __init__.py  conftest.py  test_dataloader.py  test_eval_data.py  test_sample_eval_data.py
tests/eval_task/: __init__.py  test_eval_task_serialization.py  test_multilabel_judge.py  test_multilabel_results.py  test_multilabel_schema.py  test_multilabel_scoring.py
tests/judge/: __init__.py  conftest.py  test_judge.py  test_judge_async_evaluation.py  test_judge_builder.py  test_judge_results.py  test_judge_sync_evaluation.py
tests/llm_client/: conftest.py  test_anthropic.py  test_async_anthropic.py  test_async_azureopenai.py  test_async_azureopenai_integration.py  test_async_llm_client.py  test_async_openai.py  test_async_openai_integration.py  test_azureopenai.py  test_azureopenai_integration.py  test_embeddings.py  test_llm_client.py  test_llm_structured_outputs.py  test_llm_xml.py  test_openai.py  test_openai_integration.py
tests/meta_evaluator/: __init__.py  conftest.py  test_metaevaluator.py  test_metaevaluator_clients.py  test_metaevaluator_integration.py  test_metaevaluator_judges.py  test_metaevaluator_scoring.py
tests/scores/: __init__.py  conftest.py  test_agreement.py  test_classification.py  test_custom_scorer.py  test_metrics_config.py  test_text_comparison.py
tests/scores_reporting/: test_score_report.py
tutorial/: index.html
(+104 files in other folders)
