[project]
name = "meta-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pradyuprasad", email = "pradyu.sp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.21.0",
    "instructor>=1.8.3",
    "matplotlib>=3.5.0",
    "openai>=1.82.1",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.9.0",
    "streamlit>=1.32.0",
]

[project.scripts]
meta-evaluator = "meta_evaluator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.11",
]

[tool.ruff.lint]
extend-select = ["D", "DOC"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may be slow or require external services)"
]

